--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ build/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/csharp_v2/src/MicroServiceWorkshop/.vs
+/csharp_v2/src/MicroServiceWorkshop/packages
